# msaez-automate-eventstorming-generator

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-build-push.yml
k8s/: deployment.yaml
knowledge/: UIWireFrameGenerator_Command_Input.md  UIWireFrameGenerator_Command_Output.json  UIWireFrameGenerator_ReadModel_Input.md  UIWireFrameGenerator_ReadModel_Output.json  invalid_case_1.json  invalid_case_2.json  ui_component_base_value.json
knowledge/mocks/: esActionUtilMocks.json  function_requirements.json  generateAggregatesFromDraftData.json  inputedState.json
knowledge/relatedSources/: EventStormingModelCanvas.js  createBoundedContextsIfNotExists.js
notes/: autoscaler_improvements.md  cluster_expand_guides.md  ddl_flow.html  depolyment_guides.md  events_flow.html  hpa_deployment_guide.md
presets/: generator_preset.py  model_preset.py
sandbox/: smart_logger.py
sandbox/process-gpt-a2a-orch-mono/: a2a_client.py
scripts/: apply_to_k8s.sh  build_image.sh
src/eventstorming_generator/: config.py  graph.py  main.py  main_job_distribute.py  run.py  run_a2a_server.py  run_healcheck_server.py  sandbox.py  simple_autoscaler.py  terminal.py  test.py
tests/: conftest.py
tests/generator_utils/: test_create_draft_generator_util.py  test_merge_created_bounded_context_generator_util.py  test_merge_draft_generator_util.py
tests/generators/: test_assign_fields_to_actions_generator.py  test_create_aggregate_actions_by_function.py  test_create_bounded_context_generator.py  test_create_draft_generator.py  test_merge_created_bounded_context_generator.py  test_merge_draft_generator.py  test_requirement_mapping_generator.py
tests/graphs/: test_main_graph.py
tests/sub_graph_utils/: test_create_aggregate_by_functions_util.py  test_create_context_mapping_util.py
tests/sub_graphs/: test_create_aggregate_by_functions_sub_graph.py  test_create_bounded_context_by_functions_sub_graph.py  test_create_command_actions_by_function_sub_graph.py  test_create_context_mapping_sub_graph.py  (+2 more)
(+538 files in other folders)
