[project]
name = "msaez-automate-eventstorming-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "convert-case>=1.2.3",
    "firebase-admin>=6.8.0",
    "kubernetes>=31.1.0",
    "langchain-community>=0.3.23",
    "langchain[openai]>=0.3.25",
    "langchain[google-genai]>=0.3.25",
    "langgraph>=0.4.2",
    "langsmith>=0.3.42",
    "pluralizer>=1.2.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "pytest>=8.4.2",
    "a2a-sdk[http-server]>=0.3.19",
    "fastapi>=0.119.1",
    "uvicorn[standard]>=0.38.0",
    "sse-starlette>=3.0.3"
]

[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["eventstorming_generator"]

[tool.setuptools.package-dir]
"eventstorming_generator" = "src/eventstorming_generator"

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]

[tool.ruff.lint.pydocstyle]
convention = "google"
